RESOLVED FIXED100583
AX: file upload input text value is not exposed through accessibility
https://bugs.webkit.org/show_bug.cgi?id=100583
Summary AX: file upload input text value is not exposed through accessibility
chris fleizach
Reported 2012-10-26 18:02:31 PDT
The value of the file upload button is not exposed on the Mac. This is a tough problem to solve on the Mac because there are three pieces of information. 1) the type of button, 2) the text on the button, 3) the text for the value The best compromise we think is to label this as a file upload button type in the role description, and then expose the file path text as the AXTitle. This will give the more relevant information and should be clear what is happening
Attachments
patch (7.49 KB, patch)
2012-10-26 18:07 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2012-10-26 18:07:12 PDT
WebKit Review Bot
Comment 2 2012-11-13 12:30:45 PST
Comment on attachment 171065 [details] patch Clearing flags on attachment: 171065 Committed r134465: <http://trac.webkit.org/changeset/134465>
WebKit Review Bot
Comment 3 2012-11-13 12:30:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.